--- a/notebooks/LTP_task2_pred.ipynb
+++ b/notebooks/LTP_task2_pred.ipynb
@@ -48,11 +48,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "bcm-iCUsWzl0"
+        "id": "bcm-iCUsWzl0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5421c38a-5ed5-47c1-dfe3-f871a54dd68a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -76,7 +88,7 @@
       "metadata": {
         "id": "62MR0VWx9KrZ"
       },
-      "execution_count": 28,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -95,19 +107,25 @@
         "    # Get predictions and convert to numerical\n",
         "    pred = model.predict(tok_text)[\"logits\"]\n",
         "    prob = tf.nn.sigmoid(pred)\n",
-        "    multi_pred = np.zeros(prob.shape)\n",
         "\n",
-        "    # if probability is 0.50 or higher, assign that label\n",
+        "    # multi-label predictions\n",
+        "    multi_pred = np.zeros(prob.shape)\n",
         "    multi_pred[np.where(prob >= 0.5)] = 1\n",
         "\n",
-        "    #single_predictions = encoder.inverse_transform(single_pred)\n",
+        "    # top prob label prediction\n",
+        "    single_pred = np.zeros(prob.shape)\n",
+        "    for p, max_prob in zip(single_pred, np.argmax(prob, axis=1)):\n",
+        "        p[max_prob] = 1\n",
+        "\n",
+        "    # convert numerical labels to original values\n",
+        "    single_predictions = encoder.inverse_transform(single_pred)\n",
         "    multi_predictions = encoder.inverse_transform(multi_pred)\n",
-        "    return multi_predictions"
+        "    return multi_predictions, single_predictions"
       ],
       "metadata": {
         "id": "BPVNj74ReJpN"
       },
-      "execution_count": 116,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -139,7 +157,7 @@
       "metadata": {
         "id": "6ZJHqu7Xn9kl"
       },
-      "execution_count": 30,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -167,7 +185,7 @@
       "metadata": {
         "id": "rOj8N0ylBW5O"
       },
-      "execution_count": 31,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -187,7 +205,7 @@
       "metadata": {
         "id": "bHV9nTr5npjw"
       },
-      "execution_count": 41,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -199,7 +217,7 @@
       "metadata": {
         "id": "ECojyJq28pO6"
       },
-      "execution_count": 42,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -211,15 +229,30 @@
         "DEBERTA.load_weights('/content/drive/MyDrive/LTP_data/LTP_DEBERTA_weights.h5')"
       ],
       "metadata": {
-        "id": "5IABpbb_8Gk3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5IABpbb_8Gk3",
+        "outputId": "3c336797-a216-46c9-c009-0638a51641be"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "All model checkpoint layers were used when initializing TFDebertaForSequenceClassification.\n",
+            "\n",
+            "Some layers of TFDebertaForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-large and are newly initialized: ['classifier', 'pooler', 'cls_dropout']\n",
+            "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "multi_pred = predict('microsoft/deberta-large', DEBERTA, task2_comments, labels)"
+        "multi_pred, top_prob_pred = predict('microsoft/deberta-large', DEBERTA, task2_comments, labels)"
       ],
       "metadata": {
         "id": "ikiwVWuZ8fTP"
@@ -230,21 +263,33 @@
     {
       "cell_type": "code",
       "source": [
-        "df_task2['label_prediction'] = multi_pred"
+        "df_task2['label_prediction'] = multi_pred\n",
+        "df_task2['highest_prob_label'] = top_prob_pred"
       ],
       "metadata": {
         "id": "s2UIn5bC9hFN"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "df_task2.to_csv('top100threads_results_DEBERTA.csv')"
+        "df_task2.to_csv('DEBERTA_results.csv')"
       ],
       "metadata": {
         "id": "gAeV1ipQ9kQj"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_task2"
+      ],
+      "metadata": {
+        "id": "Sp1J_6RS68u_"
       },
       "execution_count": null,
       "outputs": []
@@ -270,7 +315,8 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.7"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
